[gd_scene load_steps=9 format=3 uid="uid://biuopq3a5e4lx"]

[ext_resource type="Script" path="res://player/ElementPowers/fire/fire_element_component.gd" id="1_5t8kq"]
[ext_resource type="Texture2D" uid="uid://b8cwpypgwxf38" path="res://player/ElementPowers/fire/assets/slice_animation/SFX301_01.png" id="2_ox6qg"]
[ext_resource type="Texture2D" uid="uid://dp3higbp3ay53" path="res://player/ElementPowers/fire/assets/slice_animation/SFX301_02.png" id="3_isg40"]
[ext_resource type="Texture2D" uid="uid://dofkyc0lx1f7l" path="res://player/ElementPowers/fire/assets/slice_animation/SFX301_03.png" id="4_hdn7q"]
[ext_resource type="Texture2D" uid="uid://dqd30hg88ysjh" path="res://player/ElementPowers/fire/assets/slice_animation/SFX301_04.png" id="5_2r1jv"]
[ext_resource type="Texture2D" uid="uid://betjqvyeodhb1" path="res://player/ElementPowers/fire/assets/slice_animation/SFX301_05.png" id="6_7wdcg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mn2u1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("2_ox6qg")
}, {
"duration": 1.0,
"texture": ExtResource("3_isg40")
}, {
"duration": 1.0,
"texture": ExtResource("4_hdn7q")
}, {
"duration": 1.0,
"texture": ExtResource("5_2r1jv")
}, {
"duration": 1.0,
"texture": ExtResource("6_7wdcg")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"slice",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb8bl"]
size = Vector2(28.5, 65)

[node name="FireElementComponent" type="Node"]
script = ExtResource("1_5t8kq")

[node name="FireAttack" type="Node2D" parent="."]

[node name="SliceAnimation" type="AnimatedSprite2D" parent="FireAttack"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_mn2u1")
animation = &"slice"
frame = 4
frame_progress = 0.00524857
flip_h = true

[node name="HitBox" type="Area2D" parent="FireAttack"]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireAttack/HitBox"]
position = Vector2(1.75, 3.5)
shape = SubResource("RectangleShape2D_pb8bl")

[node name="EffectiveHitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="FireAttack/SliceAnimation" to="." method="_on_slice_animation_animation_finished"]
[connection signal="area_entered" from="FireAttack/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="EffectiveHitTimer" to="." method="_on_effective_hit_timer_timeout"]
